# raytracing

./: README.md  pyproject.toml
pathtracer/: PathTracer.ipynb
pathtracer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pathtracer/.ipynb_checkpoints/: PathTracer-checkpoint.ipynb
tests/: test_pathtracer.py
